<resources>
    <string name="app_name">电子账本</string>
    <string name="date">占位符:日期</string>
    <string name="expenditure">占位符:本日收支情况</string>
    <string name="note">占位符:备注</string>
    <string name="type">占位符:类型</string>
    <string name="situation">占位符:本次收支情况</string>
    <string name="cate_text">占位符</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="show_zero">0.00</string>
    <string name="date_picker">本月</string>
</resources>