<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/category"
        android:layout_marginTop="30dp"
        android:text="@string/note"
        android:textColor="#999"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/this_expenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/situation"
        android:textColor="@color/in"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

</RelativeLayout>